--- a/style.css
+++ b/style.css
@@ -3,6 +3,34 @@
   padding:0;
 }
 
+body {
+  background: linear-gradient(to bottom, #B721FF, #2AF598, #fec051, #FEE140, #FA709A );
+  background-size: 100%;
+	background-repeat: no-repeat;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 3rem 0;
+  overflow-x: hidden;
+  width: 100vw;
+
+  font-family: sans-serif;
+
+  &::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    background: linear-gradient(to right bottom, rgba(255,255,255,0.2), #21D4FD 75%);
+  }
+}
+
 .container{
   display: flex;
   justify-content: center;
